--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -143,6 +143,7 @@ body, html, * {
     width: 100vw !important;
     height: 100% !important;
     display: flex !important;
+    flex-direction: column !important;
     align-items: center !important;
     justify-content: flex-end !important;
     gap: 0 !important;
