--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -294,5 +294,10 @@ body, html, * {
 .wallet-adapter-modal-wrapper,
 .wallet-adapter-modal,
 .wallet-adapter-modal-overlay {
-  z-index: 999999 !important;
+  z-index: 2147483647 !important;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
 }
