--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -56,6 +56,11 @@ body, html, * {
   font-weight: 600;
   margin-left: 0.8em;
   margin-right: 0.2em;
+  font-size: 1.1em;
+  max-width: 180px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
 /* --- Remove old wallet-button overrides to prevent conflicts --- */
 
@@ -266,4 +271,4 @@ body, html, * {
   .navbar-icon-glow {
     display: none !important;
   }
-}
+/* End of file */
